plugins/xpath/xpath-lang/testData/xpath2/highlighting/types/stringToQName.xpath2
prefix-from-QName(<error descr="Expected type 'xs:QName?', got 'xs:string'">'xs:string'</error>)